--- a/pom.xml
+++ b/pom.xml
@@ -261,20 +261,16 @@
                 <enabled>false</enabled>
             </snapshots>
         </repository>
-        <!--<repository>
-            <id>eap71-brew</id>
-            <url>http://download.eng.bos.redhat.com/brewroot/repos/jb-eap-7.1-rhel-7-maven-build/latest/maven</url>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
         <repository>
-            <id>fuse62-brew</id>
-            <url>http://download.eng.bos.redhat.com/brewroot/repos/jb-fuse-6.2-build/latest/maven</url>
+            <id>redhat-earlyaccess</id>
+            <url>https://maven.repository.redhat.com/earlyaccess/all/</url>
             <snapshots>
                 <enabled>false</enabled>
             </snapshots>
-        </repository>-->
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+        </repository>
     </repositories>
 
     <!-- Modules -->
