--- a/pom.xml
+++ b/pom.xml
@@ -17,10 +17,7 @@
   See the License for the specific language governing permissions and
   limitations under the License.
   #L%
-  -->
-
-
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  --><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <name>Wildfly Camel :: Example</name>
@@ -292,8 +289,7 @@
         <module>camel-mail</module>
         <module>camel-mail-spring</module>
         <module>camel-rest-swagger</module>
-
-
-    </modules>
+    <module>example-camel-servlet-proxy</module>
+  </modules>
 
 </project>
